@@ -15,6 +15,10 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 5.1
 -----------------
 
+6/19/15
+    - Fixed a fatal bug in psse_convert_xfmr() affecting transformers
+      with CW and/or CZ equal to 1. Thanks to Matthias Resch.
+
 5/18/15
     - Fixed a crash in have_fcn() caused by changes in OPTI Toolbox
       v2.15 (or possibly v2.12).
